# lambda_with_poetry

./: .gitignore  README.md  dir_iterator.py  lambda_function.py  pyproject.toml  test.py
test_dir/: test.txt
